<package>
	<name>iiwa</name>
	<description> iiwa Robot </description>
	<version>2.0.0</version>
	<maintainer email="khansari@cs.stanford.edu">Mohammad Khansari</maintainer>
	<buildtool_depend>catkin</buildtool_depend>
	<license>BSD</license>
	<url> http://lasa.epfl.ch/khansari </url>
	<build_depend> roscpp </build_depend>
	<build_depend> message_generation </build_depend>
	<run_depend>   message_runtime </run_depend>
</package>
